Update icon & doc

--- a/docs/assets/custom.css
+++ b/docs/assets/custom.css
@@ -1,6 +1,17 @@
+:root {
+    --md-primary-fg-color:        #5a226c;
+    --md-primary-fg-color--light: #5a226c;
+    --md-primary-fg-color--dark:  #5a226c;
+}
+
 /** COMMON */
 a {
     outline: none !important;
+}
+
+.md-nav__item .md-nav__link--active,
+.md-typeset a {
+    color: #a262b7;
 }
 .md-nav__list .md-nav__item label.md-nav__link {
     display: none;
