Update main color

--- a/docs/assets/custom.css
+++ b/docs/assets/custom.css
@@ -1,7 +1,7 @@
 :root {
-    --md-primary-fg-color:        #5a226c;
-    --md-primary-fg-color--light: #5a226c;
-    --md-primary-fg-color--dark:  #5a226c;
+    --md-primary-fg-color:        #3B739B;
+    --md-primary-fg-color--light: #3B739B;
+    --md-primary-fg-color--dark:  #3B739B;
 }
 
 /** COMMON */
