--- a/docs/assets/custom.css
+++ b/docs/assets/custom.css
@@ -11,7 +11,7 @@ a {
 
 .md-nav__item .md-nav__link--active,
 .md-typeset a {
-    color: #a262b7;
+    color: #3b739b;
 }
 .md-nav__list .md-nav__item label.md-nav__link {
     display: none;
