--- a/apps/server/public/assets/main.css
+++ b/apps/server/public/assets/main.css
@@ -6,6 +6,10 @@ html, body {
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    padding: 0 30px;
+}
+
 body:after {
     content: '';
     background-color: #f7f7f7;
@@ -30,44 +34,74 @@ body:before {
 
 .Body {
     margin: 0 auto;
-    position: relative;
+    padding: 0;
     font-size: 0;
     width: 100%;
-    height: calc(100% - 50px);
-    box-sizing: border-box;
+    height: 100%;
     max-width: 1200px;
-    padding: 30px;
     z-index: 1;
+    border-collapse: collapse;
+    border-spacing: 0;
+    position: relative;
 }
 
-.Center {
+.Content {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 50%;
+}
+
+.Content.Right {
+    text-align: center;
+    position: relative;
+}
+
+@media (max-width: 750px) {
+    .Content.Right {
+        display: none;
+    }
+}
+
+.Content.Right .Circle1 {
+    height: 300px;
+    width: 300px;
+    background-color: #FBFBF9;
+    border-radius: 50%;
+    position: relative;
+    display: inline-block;
+}
+
+.Content.Right .Circle1 img {
+    height: 230px;
+    width: 250px;
     margin: 0;
     position: absolute;
     top: 50%;
-    left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
-.Body .Item1 {
-    display: inline-block;
-    height: 100%;
-    width: 50%;
-    position: relative;
-}
-
-.Body .Item2 {
-    display: inline-block;
-    height: 100%;
-    width: 50%;
-    text-align: center;
-    position: relative;
+.Content.Right .Circle1:after {
+    content: '';
+    height: 20px;
+    width: 20px;
+    background-color: #62b6f7;
+    border-radius: 50%;
+    position: absolute;
+    right: -10px;
+    bottom: -5px;
 }
 
 .Title {
     font-size: 60px;
     color: #3B739B;
     text-transform: uppercase;
+}
+
+@media (max-width: 420px) {
+    .Title {
+        font-size: 40px;
+    }
 }
 
 .Text {
@@ -94,58 +128,15 @@ body:before {
     font-size: 18px;
 }
 
-.Circle1 {
-    height: 300px;
-    width: 300px;
-    background-color: #FBFBF9;
-    border-radius: 50%;
-    overflow: hidden;
-    position: relative;
-}
-
-.Circle1 img {
-    height: 230px;
-    width: 250px;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-.Circle3 {
-    height: 20px;
-    width: 20px;
-    background-color: #62b6f7;
-    border-radius: 50%;
-    position: absolute;
-    right: -10px;
-    bottom: -5px;
-}
-
 .Footer {
-    height: 50px;
-    text-align: center;
-    background-color: #f7f7f7;
-}
-
-.Footer .Content {
+    padding: 34px 30px 30px;
+    box-sizing: border-box;
     width: 100%;
-    max-width: 1200px;
     display: inline-block;
     font-size: 14px;
     text-align: left;
-    padding-top: 16px;
-    padding-left: 30px;
     color: #3B739B;
-    box-sizing: border-box;
-}
-
-@media (max-width: 888px) {
-    .Body .Item1 {
-        width: 100%;
-    }
-    .Body .Item2 {
-        display: none;
-    }
+    background-color: #f7f7f7;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
