--- a/apps/server/public/assets/main.css
+++ b/apps/server/public/assets/main.css
@@ -79,6 +79,7 @@ body:before {
     top: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    border-radius: 55px;
 }
 
 .Content.Right .Circle1:after {
